cmake_minimum_required(VERSION 3.22)
project(LeetCodeCPP)

set(CMAKE_CXX_STANDARD 11)

add_executable(TwoSum TwoSum.cpp)
add_executable(PalindromeNumber PalindromeNumber.cpp)
add_executable(LongestCommonPrefix LongestCommonPrefix.cpp)
add_executable(ValidParentheses ValidParentheses.cpp)
add_executable(MergeTwoSortedLists MergeTwoSortedLists.cpp)
add_executable(RemoveDuplicatesfromSortedArray RemoveDuplicatesfromSortedArray.cpp)
add_executable(RemoveElement RemoveElement.cpp)